--- a/inventarios/src/main/resources/application.properties
+++ b/inventarios/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=inventarios
+
+#Conexion a mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/inventarios_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#server.port=8081
+
+
